--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,5 @@
 reqres.users.api.url=https://reqres.in/api/users
 
 spartan.url=http://54.205.239.177:8000
+
+ords.url = http://54.205.239.177:1000/ords/hr
