--- a/configuration.properties
+++ b/configuration.properties
@@ -4,3 +4,5 @@ reqres.users.api.url=https://reqres.in/api/users
 spartan.url=http://44.201.134.164:8000
 
 ords.url = http://44.201.134.164:1000/ords/hr
+
+spartan.auth.url=http://54.205.239.177:7000
