--- a/configuration.properties
+++ b/configuration.properties
@@ -6,3 +6,5 @@ spartan.url=http://44.201.134.164:8000
 ords.url = http://44.201.134.164:1000/ords/hr
 
 spartan.auth.url=http://54.205.239.177:7000
+
+bookit.base.url=https://cybertek-reservation-api-qa3.herokuapp.com
