--- a/configuration.properties
+++ b/configuration.properties
@@ -8,3 +8,13 @@ ords.url = http://44.201.134.164:1000/ords/hr
 spartan.auth.url=http://54.205.239.177:7000
 
 bookit.base.url=https://cybertek-reservation-api-qa3.herokuapp.com
+
+#book it users with type
+teacher_email=blyst6@si.edu
+teacher_password=barbabaslyst
+
+team_member_email=fscoughx@msu.edu
+team_member_password=feodorascough
+
+team_leader_email=lfinnisz@yolasite.com
+team_leader_password=lissiefinnis
